# Modelo-Predictivo-TCC

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pipeline.yml
Dashboard/: App.py
Data/Processed/Processing/: 02_Limpieza_Transformacion.csv
Data/Processed/Validation/: 03_Validacion.csv
Data/Sql/: db_telco_churn.sqlite
EDA/: 01_calidad_datos.py  02_analisis_estadistico.py
ModeloPredictivo/: Entrenamiento.py  Predict.py  Predictivo.py  Train.py  Visualizaciones.py  modelo_churn.pkl  reporte_riesgo_churn.csv
Performance/: Rendimiento.py
Reports/EDA/: Reporte_Calidad_Métricas.csv
Reports/ModelPredictive/: Resultados_Comparacion_Modelos.csv  reporte_riesgo_churn.csv
Scripts/: CargaDeDatos.py  Ingesta.py  LimpiezaTransformacion.py  Pipeline.py  Validacion.py
